      everything but its done. NOT TOUCHING THAT AGAIN.
    * Added some parts of the store menu and concepts. Not functioning yet.
    * Reduced money given by enemies by a factor or 4. Enemy health by half and player damage by half. Buffs also got a
      reduction.
    * Added some player variables to get ready for the store so any old save won't work.
    * Stores 80% there just have to implement it into the player.
------------------------------------------------------------------------------------------------------------------------
3.6 * Store update. Go spend your money! Needs proper testing first jk.
      Todos left to finish the store update: update HUD and player panel to show proper min/max, and user needs to get
      to stage 3 first and then buy the store for 100 money(maybe).
------------------------------------------------------------------------------------------------------------------------
3.62 * Changes player save file to save class dict but only the player values and not the inherited values from sprite.
     * Stage picker now works so it will only show the stages the player beat.
     * Updated HUD and player panel to show base and max values. New problem is that the string needs to be formatted to
       show only 2 decimal points.
------------------------------------------------------------------------------------------------------------------------
3.7  * Reformatted some labels that use decimals to shorten them to 2 decimal points.
     * changed the store so it only opens after stage 3.
     * redid health and damage value defaults for player.
     * Current stage is now an option at select stage.
     * Stage 4 is on. Needs more testing but its hella hard folks lol
------------------------------------------------------------------------------------------------------------------------
3.75 * Made stage 4 somewhat easier.
     * Settings menu working in player hub, removed from main menu.
